# Perplexity-Truth

./: .yamllint  ARCHITECTURE.md  Cargo.toml  GOVERNANCE.md  LEGAL_STRATEGY.md  LICENSE  README.md  REPO_CONSTITUTION.md  SECURITY.md  USAGE.txt  build.rs  config.toml  create-space-instructions-for-clHtK9rORM6UD5VbrpNZMA.md
.github/: BOARD_APPROVERS.txt
.github/workflows/: .yamllint  ci-secure.yml  ci.yml
config/: crate-integrity.toml  denylist.toml  jurisdictions.yaml
cpp/: BUILD.md  CMakeLists.txt  engine.cpp  engine.hpp
cpp/cmake/: perplexity_truth_engineConfig.cmake.in
cpp/examples/: engine_cli.cpp
cpp/tests/: engine_tests.cpp
crates/perplexity_truth_tiers/: Cargo.toml
crates/perplexity_truth_tiers/src/: lib.rs  tier.rs  tier1.rs  tier2.rs
db/: schema.sql
docs/: README-foia.md  case-template-full.md  case-template-social-summary.md  enforcing-neurorights-framework.md  foia-cover-letter-template.md  foia-request-neurotechnology.md  foia-request-psychological-practices.md  foia-request-vulnerable-populations.md  gdpr-sovereignty.md  glossary.md  multi-tier-storage.md  neurorights-defense-playbook.md  pattern-of-abuse-mkultra-neurorights-and-modern-tech.md  policy-unverified-serious-allegations.md
docs/advocacy-workflows/: product-evaluation-guide.md
docs/api/: invariant_validator.yaml
docs/compliance-checklists/: corporate-review-protocol.md
docs/invariants/: formal-logic.md  shutdown_compliance_rubric.md
docs/law-models/: model-neurorights-amendment.md
docs/regulatory-templates/: ftc-complaint-template.md
lua/: classify.lua  normalize.lua
neurorights-defense/: Cargo.toml
schemas/: compliance_check_items.sql  neural_policies.sql
scripts/: constitutional_check.sh  init-repo.sh  verify-invariants.sh
sovereign-truthd/: Cargo.toml
sovereign-truthd/src/: main.rs
src/: db.rs  debunk.rs  main.rs  tier3.rs
src/analysis/: bias_audit.rs  cultural_tiers.rs  gap_flood_detector.rs
src/api/: invariant_validator.rs
src/chat/: context.rs
src/cli/: social_summary.rs
src/core/: severity.rs
src/crypto/: selective_disclosure.rs
src/gate/: hard_gate.rs
src/invariants/: function_rules.rs  response_checker.rs
src/models/: template.rs
src/protocols/: self_report.rs
src/remedies/: alternate_oversight.rs  remedy_engine.rs
src/rights/: neurorights.rs  un_framework.rs
src/rust/: classifier.rs  lib.rs  policy_lookup.rs
src/safety/: framing_check.rs  url_sandbox.rs
src/security/: allowlist.rs  crate_integrity.rs  temporal_scan.rs  unicode_denylist.rs
src/verification/: synthetic_detector.rs
src/viz/: gaps.rs
tests/: bias_audit.rs
tools/crate-integrity/: Cargo.toml
tools/crate-integrity/src/: main.rs
