[package]
name = "neurorights-defense"
version = "0.1.0"
edition = "2021"
authors = ["Perplexity-Truth Contributors"]
description = "Core library for neurorights compliance analysis, neural data classification, and rights-based reporting"
license = "Apache-2.0"
repository = "https://github.com/mk-bluebird/Perplexity-Truth"
keywords = ["neurorights", "privacy", "compliance", "neurotechnology", "ai-ethics"]
categories = ["science", "web-programming"]
readme = "README.md"
rust-version = "1.75"

[lib]
name = "neurorights_defense"
path = "src/rust/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "neurorights-cli"
path = "src/rust/bin/cli.rs"
required-features = ["cli-tool"]

[[example]]
name = "classify_scenario"
path = "examples/classify_scenario.rs"

[[example]]
name = "policy_lookup"
path = "examples/policy_lookup.rs"

[[example]]
name = "generate_report"
path = "examples/generate_report.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

regex = "1.10"
lazy_static = "1.5"
once_cell = "1.19"

lru = "0.12"

thiserror = "1.0"
anyhow = "1.0"

log = "0.4"
env_logger = { version = "0.11", optional = true }

clap = { version = "4.5", features = ["derive", "env"], optional = true }
colored = { version = "2.1", optional = true }

serde_yaml = "0.9"
toml = "0.8"

uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
assert_fs = "1.1"
criterion = "0.5"
proptest = "1.4"

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["process"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[features]
default = ["sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]
lua-scripting = []
cli-tool = ["clap", "colored", "env_logger"]
full = ["sqlite-bundled", "lua-scripting", "cli-tool"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "classifier_benchmark"
harness = false
